--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@livekit/components-styles": "^1.1.4",
     "@tailwindcss/vite": "^4.0.7",
     "axios": "^1.7.9",
+    "framer-motion": "^12.4.7",
     "livekit-client": "^2.9.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
